--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Loft Taxi</title>
-    <script>
+    <!-- <script>
       var _rollbarConfig = {
         accessToken: '438141d2328c4e41b8c95492eda82922',
         captureUncaught: true,
@@ -386,7 +386,7 @@
         },
       ])
       // End Rollbar Snippet
-    </script>
+    </script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
